# slipbox-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  conftest.py  demo-script.md  demo.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  llm-evals.yml  release.yml
docs/: SYSTEM_PROMPT.md  TAURI_MENU_BAR_PLAN.md
evals/: conftest.py  seed_data.py
evals/llm/: test_cluster_ops.py  test_exploration.py  test_linking.py  test_note_creation.py  test_prompts.py  test_search.py  test_tags_and_dates.py  test_update_delete.py  test_workflow.py
evals/tool_contracts/: conftest.py  test_chaining.py  test_output_format.py
scripts/: build_skills.py  capture-demo.sh  com.zettelkasten.cluster-detection.plist  demo-mcp.json.template  detect_clusters.py  install-cluster-detection.sh  new-worktree.sh  watch_notes.py
scripts/demo-prompts/: 01-maintenance.txt  02-search.txt  03-central-notes.txt  04-idea-capture.txt  05-analyze-note.txt  06-source-decomposition.txt  07-cluster-report.txt  08-structure-note.txt  10-orphans.txt  11-similar-notes.txt  12-linked-notes.txt  13-tag-taxonomy.txt  14-date-browsing.txt  15-knowledge-exploration.txt  17-knowledge-synthesis.txt
scripts/demo-vault/notes/: 20240101T100000000000000.md  20240101T110000000000000.md  20240101T120000000000000.md  20240101T130000000000000.md  20240101T140000000000000.md  20240101T150000000000000.md  20240101T160000000000000.md  20240101T170000000000000.md  20240101T180000000000000.md  20240102T110000000000000.md  20240102T120000000000000.md  20240102T130000000000000.md  20240102T140000000000000.md  20240102T150000000000000.md  20240102T160000000000000.md  20240103T110000000000000.md  20240103T120000000000000.md  20240103T130000000000000.md  20240103T140000000000000.md  20240103T150000000000000.md  20240104T110000000000000.md  20240104T120000000000000.md  20240104T130000000000000.md  20240104T140000000000000.md  20240104T150000000000000.md  20240104T160000000000000.md  20240105T110000000000000.md  20240105T120000000000000.md  20240105T130000000000000.md  20240105T140000000000000.md  20240105T150000000000000.md  20240105T160000000000000.md  20240105T170000000000000.md  20240105T180000000000000.md  20240105T190000000000000.md  20240106T110000000000000.md  20240106T120000000000000.md  20240106T130000000000000.md  20240106T140000000000000.md  20240106T150000000000000.md  (+1 more)
scripts/lib/: build-demo-fixture.sh  generate-demo-vault.py  inject-responses.py  snapshot-fixture.sh  tier1-deterministic.sh  tier2-claude.sh  tier3-obsidian.sh  tier4-asciinema.sh  update-demo-blocks.py
skills/slipbox-analyze-note/: SKILL.md
skills/slipbox-cluster-maintenance/: SKILL.md
skills/slipbox-knowledge-creation/: SKILL.md
skills/slipbox-knowledge-creation-batch/: SKILL.md
skills/slipbox-knowledge-exploration/: SKILL.md
skills/slipbox-knowledge-synthesis/: SKILL.md
src/slipbox_mcp/: __init__.py  cli.py  config.py  dev.py  formatting.py  main.py  utils.py
src/slipbox_mcp/models/: __init__.py  cluster_models.py  db_models.py  schema.py
src/slipbox_mcp/server/: __init__.py  descriptions.py  mcp_server.py  prompts.py  resources.py
src/slipbox_mcp/server/tools/: __init__.py  cluster_tools.py  link_tools.py  note_tools.py  search_tools.py
src/slipbox_mcp/services/: __init__.py  cluster_service.py  search_service.py  zettel_service.py
src/slipbox_mcp/storage/: __init__.py  base.py  note_repository.py
src/zettelkasten_mcp/: config.py  utils.py
src/zettelkasten_mcp/models/: db_models.py  schema.py
src/zettelkasten_mcp/server/: mcp_server.py
src/zettelkasten_mcp/services/: search_service.py
src/zettelkasten_mcp/storage/: note_repository.py
tests/: conftest.py  helpers.py  test_cli.py  test_cluster_service.py  test_config.py  test_delete_referrer_sweep.py  test_formatting.py  test_fts5_schema.py  test_fts5_search.py  test_integration.py  test_link_inverse.py  test_markdown_parsing.py  test_mcp_server.py  test_models.py  test_note_id_path_traversal.py  test_note_repository.py  test_prune_dangling_links.py  test_repository_queries.py  test_search_service.py  test_semantic_links.py  test_storage_sync.py  test_utils.py  test_version.py  test_zettel_service.py
