[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slipbox-mcp"
dynamic = ["version"]
description = "A Zettelkasten knowledge management system as an MCP server"
authors = [
    {name = "Peter J. Herrel", email = "peterherrel@protonmail.com"}
]
maintainers = [
    {name = "James Fishwick"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "mcp",
    "model-context-protocol",
    "zettelkasten",
    "knowledge-management",
    "note-taking",
    "obsidian",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.0.0",
    "markdown>=3.4.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "pyyaml>=6.0",  # used directly by scripts/build_skills.py
]

[project.scripts]
slipbox = "slipbox_mcp.cli:main"
slipbox-mcp = "slipbox_mcp.main:main"

[project.urls]
Homepage = "https://github.com/jamesfishwick/slipbox-mcp"
Repository = "https://github.com/jamesfishwick/slipbox-mcp"
Issues = "https://github.com/jamesfishwick/slipbox-mcp/issues"
Changelog = "https://github.com/jamesfishwick/slipbox-mcp/releases"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "slipbox_mcp.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["slipbox_mcp*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E/W (pycodestyle), F (pyflakes), I (isort). Line length (E501) is owned by
# the formatter, not linted -- chasing un-splittable long strings is noise.
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# cli.py installs a SIGPIPE handler before importing heavy modules, and
# detect_clusters.py adds src/ to sys.path before importing the package, so a
# few imports are intentionally not at top-of-file.
"src/slipbox_mcp/cli.py" = ["E402"]
"scripts/detect_clusters.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "evals/tool_contracts"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "eval: LLM eval tests (require claude CLI)",
    "contract: deterministic tool contract tests",
]
